--- a/static-site/register.html
+++ b/static-site/register.html
@@ -112,8 +112,22 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-floating">
-                                        <input type="text" class="form-control" id="major" name="major"
-                                               placeholder="Major/Subject">
+                                        <select class="form-control" id="major" name="major">
+                                            <option value="">Select Major/Subject</option>
+                                            <option value="Computer Science">Computer Science</option>
+                                            <option value="Engineering">Engineering</option>
+                                            <option value="Mathematics">Mathematics</option>
+                                            <option value="Physics">Physics</option>
+                                            <option value="Chemistry">Chemistry</option>
+                                            <option value="Biology">Biology</option>
+                                            <option value="Business">Business</option>
+                                            <option value="Economics">Economics</option>
+                                            <option value="Medicine">Medicine</option>
+                                            <option value="Law">Law</option>
+                                            <option value="Arts">Arts & Humanities</option>
+                                            <option value="Social Sciences">Social Sciences</option>
+                                            <option value="Other">Other</option>
+                                        </select>
                                         <label for="major"><i class="fas fa-book me-2"></i>Major/Subject</label>
                                     </div>
                                 </div>
