--- a/static-site/dashboard.html
+++ b/static-site/dashboard.html
@@ -19,7 +19,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
+                <ul class="navbar-nav me-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="dashboard.html">Dashboard</a>
                     </li>
@@ -32,9 +32,15 @@
                     <li class="nav-item">
                         <a class="nav-link" href="sessions.html">Sessions</a>
                     </li>
-                    <li class="nav-item" id="authNav">
-                        <a class="nav-link" href="login.html">Login</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="ai-dashboard.html">
+                            <i class="fas fa-robot me-1"></i>AI Assistant
+                        </a>
                     </li>
+                </ul>
+                <!-- Auth Navigation -->
+                <ul class="navbar-nav" id="authNav">
+                    <!-- Will be populated by auth system -->
                 </ul>
             </div>
         </div>
